<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="nothing_to_see_here">Nothing to see here!</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps_settings">MapsActivitySettings</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="confirm_message">Are you sure you want to remove this alert?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_removed">Alert removed</string>
    <string name="deletion_cancelled">Deletion cancelled</string>
    <string name="city_removed">City removed</string>
    <string name="remove_city_confirmation">Are you sure you want to remove this city?</string>


</resources>