<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/backgroud"
        tools:context=".settings.view.SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:background="@drawable/bg_home_six"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_home">

                <RadioButton
                    android:id="@+id/btn_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/btn_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/btn_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
        <!-- First row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:background="@drawable/bg_home_six"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rgLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_home">

                    <RadioButton
                        android:id="@+id/btn_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gps"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/btn_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:background="@drawable/bg_home_six"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_home">

                    <RadioButton
                        android:id="@+id/btn_english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/btn_arabic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arabic"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <!-- Second row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:background="@drawable/bg_home_six"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_home">

                    <RadioButton
                        android:id="@+id/btn_enable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/btn_disable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disable"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:background="@drawable/bg_home_six"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_home">

                    <RadioButton
                        android:id="@+id/btn_ms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meter_sec"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/btn_mh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mile_hour"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <!-- Third row -->

</LinearLayout>

